k8s-manifests/youtube-clone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtube-clone
spec:
  type: ClusterIP
  selector:
    app: youtube-clone
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
