k8s-manifests/youtube-clone/service.yml
apiVersion: v1
kind: Service
metadata:
  name: youtube-clone-service
spec:
  type: ClusterIP   
  selector:
    app: youtube-clone
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
