k8s-manifests/youtube-clone/health-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: ingress-nginx-controller
                port:
                  number: 80
