k8s-manifests/youtube-clone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtubeclone-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - youtube.guled.co.uk
      secretName: youtube-tls
  rules:
    - host: youtube.guled.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: youtubeclone
                port:
                  number: 80
