k8s-manifests/youtube-clone/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtube-clone
  namespace: youtube-clone  
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns-cloudflare
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - youtube.guled.co.uk
      secretName: youtube-tls
  rules:
    - host: youtube.guled.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: youtube-clone-service
                port:
                  number: 80
